Step 10 Serving Static files

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -1,1 +1,45 @@
-<h1>Welcome to Tasks Management</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasks Management</title>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/frontendJs.js" defer></script>
+</head>
+
+<body>
+    <header class="done"><a href="/"><img src="/logo.svg" alt="Logo"></a></header>
+    <div class="container">
+        <h1>Welcome to Tasks Management</h1>
+        <a href="/new" class="fab">+</a>
+        <div class="task-list">
+            <a href="/task">
+                <div class="task done">
+                    <h3>Task 1</h3>
+                    <p>This is a sample task</p>
+                </div>
+            </a>
+            <a href="/task">
+                <div class="task pending">
+                    <h3>Task 2</h3>
+                    <p>This is another sample task</p>
+                </div>
+            </a>
+            <a href="/task">
+                <div class="task pending">
+                    <h3>Task 3</h3>
+                    <p>This is the third sample task</p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Learn Node Tasks Management</p>
+    </footer>
+
+</body>
+
+
+</html>
