--- a/public/not-found.html
+++ b/public/not-found.html
@@ -1,1 +1,21 @@
-<h1>Page Not found</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasks Management | Page Not Found</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header class="done"><a href="/"><img src="/logo.svg" alt="Logo"></a></header>
+    <div class="container">
+        <h1>Page Not found</h1>
+    </div>
+    <footer>
+        <p>&copy; 2024 Learn Node Tasks Management</p>
+    </footer>
+</body>
+
+</html>
